[build-system]
 requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]
include = ["*"]

[tool.setuptools.package-data]
Add = ["*.c"]

[project]
name = "Qpydict"
description = "A Fast Python Dictionary"
version = "0.0.0"
requires-python = ">=3.11"
authors = [{name = "Michael Saviour", email = "saviourme33@gmail.com"}]
maintainers = [
	    {
		name = "Michael Saviour",
		email = "saviourme33@gmail.com"
	     }
]
readme = {
       file = "README.md",
       content-type = "text/markdown"
       }
license  = { file = "LICENSE" }
keywords = ["Qpydict", "dict", "pydict", "dictionary", "fast", "Map"]
classifiers = [
    "Development Status :: 0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Python Dictionary :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["build"]

[project.urls]
Homepage      = "https://github.com/Qpydict/"
Repository    = "https://github.com/Qpydict/Qpydict.git"
Issues        = "https://github.com/Qpydict/Qpydict/issues"
Documentation = "https://github.com/Qpydict/README.md"
